Issue #25203: Failed readline.set_completer_delims() no longer left the  module in inconsistent state.